--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="#">your home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Welcome Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">new link</a>
+            <a class="nav-link" href="#">Reference Links</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled this</a>
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -35,7 +35,7 @@
         </form>
       </div>
     </nav>
-    <h1>Hello, world!</h1>
+    <h1>This the example designed by develop1</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
