--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="#">Reference Links</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled Links</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
