final commit of develop1

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       </div>
     </nav>
     <h1>This the example designed by develop1</h1>
+    <h2>Now finally I going to push the 2nd branch on remote</h2>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
